improved data loading

--- a/extraneous_code.ipynb
+++ b/extraneous_code.ipynb
@@ -163,6 +163,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/columns.txt\", \"w\") as f:\n",
+    "    f.write(\"cols = \" + str(cols) + \"\\n\")\n",
+    "    f.write(\"dropcols = \" + str(dropcols) + \"\\n\")\n",
+    "    f.write(\"cols_pre2018 = \" + str(cols_pre2018) + \"\\n\")\n",
+    "    f.write(\"dropcols_pre2018 = \" + str(dropcols_pre2018) + \"\\n\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
