--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,146 +56,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = [\n",
-    "    \"enterprise_flag\",\n",
-    "    \"record_number\",\n",
-    "    \"state_fips\",\n",
-    "    \"msa_code\",\n",
-    "    \"county_fips\",\n",
-    "    \"census_tract\",\n",
-    "    \"tract_pct_minority\",\n",
-    "    \"tract_median_income\",\n",
-    "    \"local_median_income\",\n",
-    "    \"tract_income_ratio\",\n",
-    "    \"borrower_income\",\n",
-    "    \"area_median_income\",\n",
-    "    \"borrower_income_ratio\",\n",
-    "    \"upb_acquisition\",\n",
-    "    \"purpose\",\n",
-    "    \"fed_guarantee\",\n",
-    "    \"num_borrowers\",\n",
-    "    \"first_time_homebuyer\",\n",
-    "    \"borrower_race\",\n",
-    "    \"borrower_ethnicity\",\n",
-    "    \"coborrower_race\",\n",
-    "    \"coborrower_ethnicity\",\n",
-    "    \"borrower_gender\",\n",
-    "    \"coborrower_gender\",\n",
-    "    \"borrwer_age\",\n",
-    "    \"coborrower_age\",\n",
-    "    \"occupancy_code\",\n",
-    "    \"rate_spread\",\n",
-    "    \"hoepa_status\",\n",
-    "    \"property_type\",\n",
-    "    \"lien_status\",\n",
-    "    \"borrower_over_62\",\n",
-    "    \"co_borrower_over_62\",\n",
-    "    \"ltv\",\n",
-    "    \"date_of_note\",\n",
-    "    \"term_at_org\",\n",
-    "    \"num_of_units\",\n",
-    "    \"interest_rate_at_org\",\n",
-    "    \"note_amount\",\n",
-    "    \"preapproval\",\n",
-    "    \"application_channel\",\n",
-    "    \"aus_name\",\n",
-    "    \"borrower_credit_score_model\",\n",
-    "    \"coborrower_credit_score_model\",\n",
-    "    \"dti_ratio\",\n",
-    "    \"discount_pts\",\n",
-    "    \"intro_period\",\n",
-    "    \"land_prop_interest\",\n",
-    "    \"property_value\",\n",
-    "    \"rural_tract\",\n",
-    "    \"lower_ms_delta\",\n",
-    "    \"middle_appalachia\",\n",
-    "    \"persistent_poverty\",\n",
-    "    \"concentrated_poverty\",\n",
-    "    \"high_opportunity\",\n",
-    "    \"qoz_tract\",\n",
-    "]\n",
-    "dropcols = [\n",
-    "    \"enterprise_flag\",\n",
-    "    \"record_number\",\n",
-    "    \"borrower_income\",\n",
-    "    \"upb_acquisition\",\n",
-    "    \"purpose\",\n",
-    "    \"fed_guarantee\",\n",
-    "    \"rate_spread\",\n",
-    "    \"hoepa_status\",\n",
-    "    \"property_type\",\n",
-    "    \"lien_status\",\n",
-    "    \"borrower_over_62\",\n",
-    "    \"co_borrower_over_62\",\n",
-    "    \"ltv\",\n",
-    "    \"term_at_org\",\n",
-    "    \"num_of_units\",\n",
-    "    \"interest_rate_at_org\",\n",
-    "    \"preapproval\",\n",
-    "    \"application_channel\",\n",
-    "    \"aus_name\",\n",
-    "    \"borrower_credit_score_model\",\n",
-    "    \"coborrower_credit_score_model\",\n",
-    "    \"discount_pts\",\n",
-    "    \"intro_period\",\n",
-    "    \"land_prop_interest\",\n",
-    "    \"rural_tract\",\n",
-    "    \"lower_ms_delta\",\n",
-    "    \"middle_appalachia\",\n",
-    "    \"persistent_poverty\",\n",
-    "    \"concentrated_poverty\",\n",
-    "    \"high_opportunity\",\n",
-    "    \"qoz_tract\",\n",
-    "]\n",
-    "cols_pre2018 = [\n",
-    "    \"enterprise_flag\",\n",
-    "    \"record_number\",\n",
-    "    \"state_fips\",\n",
-    "    \"msa_code\",\n",
-    "    \"county_fips\",\n",
-    "    \"census_tract\",\n",
-    "    \"tract_pct_minority\",\n",
-    "    \"tract_median_income\",\n",
-    "    \"local_median_income\",\n",
-    "    \"tract_income_ratio\",\n",
-    "    \"borrower_income\",\n",
-    "    \"area_median_income\",\n",
-    "    \"borrower_income_ratio\",\n",
-    "    \"upb_acquisition\",\n",
-    "    \"purpose\",\n",
-    "    \"fed_guarantee\",\n",
-    "    \"num_borrowers\",\n",
-    "    \"first_time_homebuyer\",\n",
-    "    \"borrower_race\",\n",
-    "    \"borrower_ethnicity\",\n",
-    "    \"coborrower_race\",\n",
-    "    \"coborrower_ethnicity\",\n",
-    "    \"borrower_gender\",\n",
-    "    \"coborrower_gender\",\n",
-    "    \"borrwer_age\",\n",
-    "    \"coborrower_age\",\n",
-    "    \"occupancy_code\",\n",
-    "    \"rate_spread\",\n",
-    "    \"hoepa_status\",\n",
-    "    \"property_type\",\n",
-    "    \"lien_status\",\n",
-    "]\n",
-    "dropcols_pre2018 = [\n",
-    "    \"enterprise_flag\",\n",
-    "    \"record_number\",\n",
-    "    \"borrower_income\",\n",
-    "    \"upb_acquisition\",\n",
-    "    \"purpose\",\n",
-    "    \"fed_guarantee\",\n",
-    "    \"rate_spread\",\n",
-    "    \"hoepa_status\",\n",
-    "    \"property_type\",\n",
-    "    \"lien_status\",\n",
-    "]"
+    "def read_columns_from_txt(filename):\n",
+    "    data = {}\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        for line in f:\n",
+    "            key, value = line.split(\"=\", 1)\n",
+    "            data[key.strip()] = eval(value.strip())\n",
+    "    return data\n",
+    "\n",
+    "columns_data = read_columns_from_txt(\"data/columns.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_loans(years):\n",
+    "    loans_list = []\n",
+    "    for year in years:\n",
+    "        if year >= 2018: # The data format changes in 2018\n",
+    "            files = [f\"data/sf/fhlmc_sf{year}c_loans.txt\", f\"data/sf/fnma_sf{year}c_loans.txt\"]\n",
+    "            loans_year = pd.concat(\n",
+    "                [pd.read_csv(file, sep=r\"\\s+\", header=None, names=cols).drop(columns=dropcols) for file in files],\n",
+    "                ignore_index=True\n",
+    "            )\n",
+    "        else:\n",
+    "            files = [f\"data/sf/fhlmc_sf{year}c_loans.txt\", f\"data/sf/fnma_sf{year}c_loans.txt\"]\n",
+    "            loans_year = pd.concat(\n",
+    "                [pd.read_csv(file, sep=r\"\\s+\", header=None, names=cols_pre2018).drop(columns=dropcols_pre2018) for file in files],\n",
+    "                ignore_index=True\n",
+    "            )\n",
+    "        loans_year[\"year\"] = year\n",
+    "        loans_list.append(loans_year)\n",
+    "        print(f\"Processed {year}\", end=\" \") # Please forgive the print statement! The full data can take upwards of 20 mins to load.\n",
+    "    return pd.concat(loans_list, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 2013Processed 2014Processed 2015"
+     ]
+    }
+   ],
+   "source": [
+    "loans = load_loans([2013, 2014, 2015])"
    ]
   },
   {
@@ -207,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_tract = ['YEAR', 'TRACTA','U7J001', 'U7J002', 'U7J003', 'U7J004', 'U7J005', 'U7J006', 'U7J007', 'U7J008']\n",
-    "tract_data = pd.read_csv('data/census/nhgis0009_ds258_2020_tract.csv')[cols_tract]\n",
+    "tract_data = pd.read_csv('data/census/nhgis0009_ds258_2020_zcta.csv')[cols_tract]\n",
     "tract_data.rename(columns={\n",
     "    'YEAR': 'year', \n",
     "    'TRACTA': 'census_tract', \n",
@@ -235,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,103 +202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tract_median_income</th>\n",
-       "      <th>borrower_income</th>\n",
-       "      <th>property_appraisal_value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2.879458e+07</td>\n",
-       "      <td>2.879458e+07</td>\n",
-       "      <td>2.879458e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>9.504369e+04</td>\n",
-       "      <td>1.485997e+05</td>\n",
-       "      <td>4.968570e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4.900241e+04</td>\n",
-       "      <td>5.525392e+06</td>\n",
-       "      <td>8.679106e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2.499000e+03</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>5.000000e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>6.794800e+04</td>\n",
-       "      <td>6.700000e+04</td>\n",
-       "      <td>2.450000e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>8.800000e+04</td>\n",
-       "      <td>1.000000e+05</td>\n",
-       "      <td>3.650000e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.134200e+05</td>\n",
-       "      <td>1.480000e+05</td>\n",
-       "      <td>5.250000e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>9.999990e+05</td>\n",
-       "      <td>9.540000e+09</td>\n",
-       "      <td>1.000000e+09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       tract_median_income  borrower_income  property_appraisal_value\n",
-       "count         2.879458e+07     2.879458e+07              2.879458e+07\n",
-       "mean          9.504369e+04     1.485997e+05              4.968570e+05\n",
-       "std           4.900241e+04     5.525392e+06              8.679106e+06\n",
-       "min           2.499000e+03     0.000000e+00              5.000000e+03\n",
-       "25%           6.794800e+04     6.700000e+04              2.450000e+05\n",
-       "50%           8.800000e+04     1.000000e+05              3.650000e+05\n",
-       "75%           1.134200e+05     1.480000e+05              5.250000e+05\n",
-       "max           9.999990e+05     9.540000e+09              1.000000e+09"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['borrower_income', 'property_appraisal_value'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m loans[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtract_median_income\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mborrower_income\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproperty_appraisal_value\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mdescribe()\n",
+      "File \u001b[1;32mc:\\Users\\emers\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39m_get_indexer_strict(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\emers\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6200\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\emers\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6252\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6249\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6251\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m-> 6252\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['borrower_income', 'property_appraisal_value'] not in index\""
+     ]
     }
    ],
    "source": [
@@ -493,14 +329,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References\n",
+    "## References\n",
     "Steven Manson, Jonathan Schroeder, David Van Riper, Katherine Knowles, Tracy Kugler, Finn Roberts, and Steven Ruggles. IPUMS National Historical Geographic Information System: Version 19.0 [dataset]. Minneapolis, MN: IPUMS. 2024. http://doi.org/10.18128/D050.V19.0"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -514,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
