added better graphs

--- a/extraneous_code.ipynb
+++ b/extraneous_code.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -245,6 +252,65 @@
    "outputs": [],
    "source": [
     "# loans = pd.read_parquet(\"data/loans_data.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Filter the data where mmi_per_thousand is greater than 20\n",
+    "# filtered_data_high_mmi = filtered_data[filtered_data['mmi_per_thousand'] > 20]\n",
+    "\n",
+    "# # Plot the histogram of value_change\n",
+    "# plt.hist(filtered_data_high_mmi['value_change'], bins=30, edgecolor='black')\n",
+    "# plt.xlabel('Value Change')\n",
+    "# plt.ylabel('Frequency')\n",
+    "# plt.title('Histogram of Value Change for MMI per Thousand > 20')\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filtered_data = data_table[(data_table['mmi_per_thousand'].abs() < 100)]\n",
+    "# plt.scatter(filtered_data['mmi_per_thousand'], filtered_data['change_from_metro'])\n",
+    "# plt.xlabel('Minority Move-ins per Thousand Whites in Zip Code')\n",
+    "# plt.ylabel('Home Value Change (%) - Difference from MSA Average')\n",
+    "# plt.title('Home Value Change and Minority Move-ins')\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Calculate the quintiles for minority_move_ins\n",
+    "# merged_quite_white_zhvi['quintile'] = pd.qcut(merged_quite_white_zhvi['minority_move_ins'], 5, labels=False)\n",
+    "\n",
+    "# # Group by quintile and calculate the average home appreciation\n",
+    "# quintile_avg_appreciation = merged_quite_white_zhvi.groupby('quintile')['value_change'].mean().reset_index()\n",
+    "\n",
+    "# # Plot the bar chart\n",
+    "# plt.bar(quintile_avg_appreciation['quintile'], quintile_avg_appreciation['value_change'])\n",
+    "# plt.xlabel('Minority Move-in Quintile')\n",
+    "# plt.ylabel('Average Home Appreciation (%)')\n",
+    "# plt.title('Average Home Appreciation by Minority Move-in Quintile')\n",
+    "# plt.xticks(quintile_avg_appreciation['quintile'], ['Q1', 'Q2', 'Q3', 'Q4', 'Q5'])\n",
+    "# plt.show()"
    ]
   }
  ],
