--- a/project_one.ipynb
+++ b/project_one.ipynb
@@ -451,109 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_f4f25 caption {\n",
-       "  caption-side: top;\n",
-       "  font-size: 20px;\n",
-       "  font-style: italic;\n",
-       "  text-align: center;\n",
-       "  color: #222;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_f4f25\" style=\"width: 50%; margin: auto;\">\n",
-       "  <caption>Table 1: Move-In and Minority Move-In by Zip Code</caption>\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_f4f25_level0_col0\" class=\"col_heading level0 col0\" >Minority Move-Ins (Initial Period)</th>\n",
-       "      <th id=\"T_f4f25_level0_col1\" class=\"col_heading level0 col1\" >Minority Move-Ins (Treatment Period)</th>\n",
-       "      <th id=\"T_f4f25_level0_col2\" class=\"col_heading level0 col2\" >Total Move-Ins (Initial Period)</th>\n",
-       "      <th id=\"T_f4f25_level0_col3\" class=\"col_heading level0 col3\" >Total Move-Ins (Treatment Period)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row0\" class=\"row_heading level0 row0\" >Count</th>\n",
-       "      <td id=\"T_f4f25_row0_col0\" class=\"data row0 col0\" >28748</td>\n",
-       "      <td id=\"T_f4f25_row0_col1\" class=\"data row0 col1\" >28748</td>\n",
-       "      <td id=\"T_f4f25_row0_col2\" class=\"data row0 col2\" >28748</td>\n",
-       "      <td id=\"T_f4f25_row0_col3\" class=\"data row0 col3\" >28748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row1\" class=\"row_heading level0 row1\" >Mean</th>\n",
-       "      <td id=\"T_f4f25_row1_col0\" class=\"data row1 col0\" >0</td>\n",
-       "      <td id=\"T_f4f25_row1_col1\" class=\"data row1 col1\" >4</td>\n",
-       "      <td id=\"T_f4f25_row1_col2\" class=\"data row1 col2\" >11</td>\n",
-       "      <td id=\"T_f4f25_row1_col3\" class=\"data row1 col3\" >58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row2\" class=\"row_heading level0 row2\" >Standard Deviation</th>\n",
-       "      <td id=\"T_f4f25_row2_col0\" class=\"data row2 col0\" >2</td>\n",
-       "      <td id=\"T_f4f25_row2_col1\" class=\"data row2 col1\" >13</td>\n",
-       "      <td id=\"T_f4f25_row2_col2\" class=\"data row2 col2\" >35</td>\n",
-       "      <td id=\"T_f4f25_row2_col3\" class=\"data row2 col3\" >147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row3\" class=\"row_heading level0 row3\" >Minimum</th>\n",
-       "      <td id=\"T_f4f25_row3_col0\" class=\"data row3 col0\" >0</td>\n",
-       "      <td id=\"T_f4f25_row3_col1\" class=\"data row3 col1\" >0</td>\n",
-       "      <td id=\"T_f4f25_row3_col2\" class=\"data row3 col2\" >0</td>\n",
-       "      <td id=\"T_f4f25_row3_col3\" class=\"data row3 col3\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row4\" class=\"row_heading level0 row4\" >25th Percentile</th>\n",
-       "      <td id=\"T_f4f25_row4_col0\" class=\"data row4 col0\" >0</td>\n",
-       "      <td id=\"T_f4f25_row4_col1\" class=\"data row4 col1\" >0</td>\n",
-       "      <td id=\"T_f4f25_row4_col2\" class=\"data row4 col2\" >0</td>\n",
-       "      <td id=\"T_f4f25_row4_col3\" class=\"data row4 col3\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row5\" class=\"row_heading level0 row5\" >Median</th>\n",
-       "      <td id=\"T_f4f25_row5_col0\" class=\"data row5 col0\" >0</td>\n",
-       "      <td id=\"T_f4f25_row5_col1\" class=\"data row5 col1\" >0</td>\n",
-       "      <td id=\"T_f4f25_row5_col2\" class=\"data row5 col2\" >0</td>\n",
-       "      <td id=\"T_f4f25_row5_col3\" class=\"data row5 col3\" >0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row6\" class=\"row_heading level0 row6\" >75th Percentile</th>\n",
-       "      <td id=\"T_f4f25_row6_col0\" class=\"data row6 col0\" >0</td>\n",
-       "      <td id=\"T_f4f25_row6_col1\" class=\"data row6 col1\" >1</td>\n",
-       "      <td id=\"T_f4f25_row6_col2\" class=\"data row6 col2\" >0</td>\n",
-       "      <td id=\"T_f4f25_row6_col3\" class=\"data row6 col3\" >38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row7\" class=\"row_heading level0 row7\" >Maximum</th>\n",
-       "      <td id=\"T_f4f25_row7_col0\" class=\"data row7 col0\" >91</td>\n",
-       "      <td id=\"T_f4f25_row7_col1\" class=\"data row7 col1\" >362</td>\n",
-       "      <td id=\"T_f4f25_row7_col2\" class=\"data row7 col2\" >641</td>\n",
-       "      <td id=\"T_f4f25_row7_col3\" class=\"data row7 col3\" >1961</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f4f25_level0_row8\" class=\"row_heading level0 row8\" >Range</th>\n",
-       "      <td id=\"T_f4f25_row8_col0\" class=\"data row8 col0\" >91</td>\n",
-       "      <td id=\"T_f4f25_row8_col1\" class=\"data row8 col1\" >362</td>\n",
-       "      <td id=\"T_f4f25_row8_col2\" class=\"data row8 col2\" >641</td>\n",
-       "      <td id=\"T_f4f25_row8_col3\" class=\"data row8 col3\" >1961</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x25950fdd220>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import display\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "prop_values_summary = data_table[['early_mmi','late_mmi','early_move_ins', 'late_move_ins']].describe().round(2)\n",
     "prop_values_summary.columns = ['Minority Move-Ins (Initial Period)','Minority Move-Ins (Treatment Period)', 'Total Move-Ins (Initial Period)', 'Total Move-Ins (Treatment Period)']\n",
@@ -590,162 +492,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Summary Table](table_one.png)\n",
+    "***View last page for table. Sorry :(***\n",
     "\n",
-    "*Note: The tables are unable to render in PDF form, please accept this photo!*\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This table shows one of the difficulties of the project, many majority-white zip codes inside of metropolitan areas either do not have many or have no minority-move ins (or any move-ins). As you can see, in the initial period, the 75th percentile zip code had zero move-ins. For all following tables and graphs, we are only looking at zip codes that had move-ins during both periods. This could lead to bias, but it aligns with the research question, so it should not meaningfully change our conclusion."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_f2f48 caption {\n",
-       "  caption-side: top;\n",
-       "  font-size: 20px;\n",
-       "  font-style: italic;\n",
-       "  text-align: center;\n",
-       "  color: #222;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_f2f48\" style=\"width: 80%; margin: auto;\">\n",
-       "  <caption>Table 2: Summary Statistics of Home Value Changes by Year</caption>\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"index_name level0\" >Statistic</th>\n",
-       "      <th id=\"T_f2f48_level0_col0\" class=\"col_heading level0 col0\" >count</th>\n",
-       "      <th id=\"T_f2f48_level0_col1\" class=\"col_heading level0 col1\" >mean</th>\n",
-       "      <th id=\"T_f2f48_level0_col2\" class=\"col_heading level0 col2\" >std</th>\n",
-       "      <th id=\"T_f2f48_level0_col3\" class=\"col_heading level0 col3\" >min</th>\n",
-       "      <th id=\"T_f2f48_level0_col4\" class=\"col_heading level0 col4\" >25%</th>\n",
-       "      <th id=\"T_f2f48_level0_col5\" class=\"col_heading level0 col5\" >50%</th>\n",
-       "      <th id=\"T_f2f48_level0_col6\" class=\"col_heading level0 col6\" >75%</th>\n",
-       "      <th id=\"T_f2f48_level0_col7\" class=\"col_heading level0 col7\" >max</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row0\" class=\"row_heading level0 row0\" >Home Value Change 2011</th>\n",
-       "      <td id=\"T_f2f48_row0_col0\" class=\"data row0 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row0_col1\" class=\"data row0 col1\" >0.001599</td>\n",
-       "      <td id=\"T_f2f48_row0_col2\" class=\"data row0 col2\" >0.032448</td>\n",
-       "      <td id=\"T_f2f48_row0_col3\" class=\"data row0 col3\" >-0.236082</td>\n",
-       "      <td id=\"T_f2f48_row0_col4\" class=\"data row0 col4\" >-0.013639</td>\n",
-       "      <td id=\"T_f2f48_row0_col5\" class=\"data row0 col5\" >0.002794</td>\n",
-       "      <td id=\"T_f2f48_row0_col6\" class=\"data row0 col6\" >0.017987</td>\n",
-       "      <td id=\"T_f2f48_row0_col7\" class=\"data row0 col7\" >0.273739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row1\" class=\"row_heading level0 row1\" >Home Value Change 2012</th>\n",
-       "      <td id=\"T_f2f48_row1_col0\" class=\"data row1 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row1_col1\" class=\"data row1 col1\" >0.002087</td>\n",
-       "      <td id=\"T_f2f48_row1_col2\" class=\"data row1 col2\" >0.051499</td>\n",
-       "      <td id=\"T_f2f48_row1_col3\" class=\"data row1 col3\" >-0.412998</td>\n",
-       "      <td id=\"T_f2f48_row1_col4\" class=\"data row1 col4\" >-0.023653</td>\n",
-       "      <td id=\"T_f2f48_row1_col5\" class=\"data row1 col5\" >0.002332</td>\n",
-       "      <td id=\"T_f2f48_row1_col6\" class=\"data row1 col6\" >0.028512</td>\n",
-       "      <td id=\"T_f2f48_row1_col7\" class=\"data row1 col7\" >0.379845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row2\" class=\"row_heading level0 row2\" >Home Value Change 2013</th>\n",
-       "      <td id=\"T_f2f48_row2_col0\" class=\"data row2 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row2_col1\" class=\"data row2 col1\" >0.000775</td>\n",
-       "      <td id=\"T_f2f48_row2_col2\" class=\"data row2 col2\" >0.067734</td>\n",
-       "      <td id=\"T_f2f48_row2_col3\" class=\"data row2 col3\" >-0.476977</td>\n",
-       "      <td id=\"T_f2f48_row2_col4\" class=\"data row2 col4\" >-0.033969</td>\n",
-       "      <td id=\"T_f2f48_row2_col5\" class=\"data row2 col5\" >-0.000104</td>\n",
-       "      <td id=\"T_f2f48_row2_col6\" class=\"data row2 col6\" >0.035514</td>\n",
-       "      <td id=\"T_f2f48_row2_col7\" class=\"data row2 col7\" >0.458202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row3\" class=\"row_heading level0 row3\" >Home Value Change 2014</th>\n",
-       "      <td id=\"T_f2f48_row3_col0\" class=\"data row3 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row3_col1\" class=\"data row3 col1\" >0.001347</td>\n",
-       "      <td id=\"T_f2f48_row3_col2\" class=\"data row3 col2\" >0.081513</td>\n",
-       "      <td id=\"T_f2f48_row3_col3\" class=\"data row3 col3\" >-0.540733</td>\n",
-       "      <td id=\"T_f2f48_row3_col4\" class=\"data row3 col4\" >-0.041143</td>\n",
-       "      <td id=\"T_f2f48_row3_col5\" class=\"data row3 col5\" >-0.001712</td>\n",
-       "      <td id=\"T_f2f48_row3_col6\" class=\"data row3 col6\" >0.039774</td>\n",
-       "      <td id=\"T_f2f48_row3_col7\" class=\"data row3 col7\" >0.823827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row4\" class=\"row_heading level0 row4\" >Home Value Change 2015</th>\n",
-       "      <td id=\"T_f2f48_row4_col0\" class=\"data row4 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row4_col1\" class=\"data row4 col1\" >0.002431</td>\n",
-       "      <td id=\"T_f2f48_row4_col2\" class=\"data row4 col2\" >0.098838</td>\n",
-       "      <td id=\"T_f2f48_row4_col3\" class=\"data row4 col3\" >-0.628896</td>\n",
-       "      <td id=\"T_f2f48_row4_col4\" class=\"data row4 col4\" >-0.048556</td>\n",
-       "      <td id=\"T_f2f48_row4_col5\" class=\"data row4 col5\" >-0.002640</td>\n",
-       "      <td id=\"T_f2f48_row4_col6\" class=\"data row4 col6\" >0.045117</td>\n",
-       "      <td id=\"T_f2f48_row4_col7\" class=\"data row4 col7\" >1.128573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row5\" class=\"row_heading level0 row5\" >Home Value Change 2016</th>\n",
-       "      <td id=\"T_f2f48_row5_col0\" class=\"data row5 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row5_col1\" class=\"data row5 col1\" >0.001695</td>\n",
-       "      <td id=\"T_f2f48_row5_col2\" class=\"data row5 col2\" >0.115651</td>\n",
-       "      <td id=\"T_f2f48_row5_col3\" class=\"data row5 col3\" >-0.706582</td>\n",
-       "      <td id=\"T_f2f48_row5_col4\" class=\"data row5 col4\" >-0.057488</td>\n",
-       "      <td id=\"T_f2f48_row5_col5\" class=\"data row5 col5\" >-0.004824</td>\n",
-       "      <td id=\"T_f2f48_row5_col6\" class=\"data row5 col6\" >0.048524</td>\n",
-       "      <td id=\"T_f2f48_row5_col7\" class=\"data row5 col7\" >1.474979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row6\" class=\"row_heading level0 row6\" >Home Value Change 2017</th>\n",
-       "      <td id=\"T_f2f48_row6_col0\" class=\"data row6 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row6_col1\" class=\"data row6 col1\" >0.002696</td>\n",
-       "      <td id=\"T_f2f48_row6_col2\" class=\"data row6 col2\" >0.134817</td>\n",
-       "      <td id=\"T_f2f48_row6_col3\" class=\"data row6 col3\" >-0.706928</td>\n",
-       "      <td id=\"T_f2f48_row6_col4\" class=\"data row6 col4\" >-0.066070</td>\n",
-       "      <td id=\"T_f2f48_row6_col5\" class=\"data row6 col5\" >-0.005925</td>\n",
-       "      <td id=\"T_f2f48_row6_col6\" class=\"data row6 col6\" >0.053803</td>\n",
-       "      <td id=\"T_f2f48_row6_col7\" class=\"data row6 col7\" >1.776770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row7\" class=\"row_heading level0 row7\" >Home Value Change 2018</th>\n",
-       "      <td id=\"T_f2f48_row7_col0\" class=\"data row7 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row7_col1\" class=\"data row7 col1\" >0.003659</td>\n",
-       "      <td id=\"T_f2f48_row7_col2\" class=\"data row7 col2\" >0.154999</td>\n",
-       "      <td id=\"T_f2f48_row7_col3\" class=\"data row7 col3\" >-0.836585</td>\n",
-       "      <td id=\"T_f2f48_row7_col4\" class=\"data row7 col4\" >-0.074531</td>\n",
-       "      <td id=\"T_f2f48_row7_col5\" class=\"data row7 col5\" >-0.007726</td>\n",
-       "      <td id=\"T_f2f48_row7_col6\" class=\"data row7 col6\" >0.061206</td>\n",
-       "      <td id=\"T_f2f48_row7_col7\" class=\"data row7 col7\" >1.922465</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_f2f48_level0_row8\" class=\"row_heading level0 row8\" >Home Value Change 2019</th>\n",
-       "      <td id=\"T_f2f48_row8_col0\" class=\"data row8 col0\" >8971</td>\n",
-       "      <td id=\"T_f2f48_row8_col1\" class=\"data row8 col1\" >0.005287</td>\n",
-       "      <td id=\"T_f2f48_row8_col2\" class=\"data row8 col2\" >0.167264</td>\n",
-       "      <td id=\"T_f2f48_row8_col3\" class=\"data row8 col3\" >-0.809886</td>\n",
-       "      <td id=\"T_f2f48_row8_col4\" class=\"data row8 col4\" >-0.080652</td>\n",
-       "      <td id=\"T_f2f48_row8_col5\" class=\"data row8 col5\" >-0.007977</td>\n",
-       "      <td id=\"T_f2f48_row8_col6\" class=\"data row8 col6\" >0.068882</td>\n",
-       "      <td id=\"T_f2f48_row8_col7\" class=\"data row8 col7\" >2.062908</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x25950fdeff0>"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Select value difference columns\n",
     "value_diff_cols = [col for col in data_table.columns if col.startswith('value_diff_')]\n",
@@ -792,13 +548,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Summary Table](table_two.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "***View last page for table. Sorry :(***\n",
+    "\n",
     "It should not be surprising that the median and mean are basically zero. Recall that we are normalizing home-value change to the metropolitan area's home-value change. It should also be unsurprising that the ranges increase over time. The difference between a neighborhood and metro area will be more obvious over time. This table has significantly fewer observations than the table above, due to the unpredictable availability of the Zillow data. The move-in data is not significantly different between the zip codes with Zillow data and the zip codes without, so we will drop the zip codes without Zillow data."
    ]
   },
