--- a/presentation_1/presentation_1.tex
+++ b/presentation_1/presentation_1.tex
@@ -1,14 +1,33 @@
 \documentclass{beamer}
 \usepackage{graphicx}
+\usepackage{xcolor}
+\usetheme{Madrid}
+%%% Colors
+\definecolor{ForestGreen}{RGB}{34,139,34}
+\usecolortheme[named=ForestGreen]{structure}
 
-
+\usepackage{amsthm}
+\title[Minority Move-Ins and Home Appreciation]{"Blockbusting" in the 21st Century?: Minority Move-ins and Neighborhood Home Value Appreciation}
+\author{Emerson Schryver}
 \begin{document}
 \begin{frame}
-\frametitle{First Slide}
+    \maketitle
+\end{frame}
+\begin{frame}
+\frametitle{Background}
 \begin{itemize}
     \item First item
     \item Second item
     \item Third item
+\end{itemize}
+\end{frame}
+\begin{frame}
+\frametitle{Outline}
+\begin{itemize}
+    \item Introduction
+    \item Methodology
+    \item Results
+    \item Conclusion
 \end{itemize}
 \end{frame}
 \end{document}
